feat: upload to s3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,14 +24,15 @@ services:
     ports:
       - '${QUEUE_PORT:-9005}:${QUEUE_PORT:-9005}'
     environment:
-      RABBITMQ_URL: '${QUEUE_RABBITMQ_URL}'
+      QUEUE_RABBITMQ_URL: '${QUEUE_RABBITMQ_URL}'
       QUEUE_NAME: '${QUEUE_NAME}'
-      AWS_ACCESS_KEY_ID: '${QUEUE_AWS_ACCESS_KEY_ID}'
-      AWS_SECRET_ACCESS_KEY: '${QUEUE_AWS_SECRET_ACCESS_KEY}'
-      AWS_REGION: '${QUEUE_AWS_REGION}'
-      S3_ENDPOINT_URL: '${QUEUE_S3_ENDPOINT_URL}'
-      S3_BUCKET: '${QUEUE_S3_BUCKET}'
-      PORT: '${QUEUE_PORT}'
+      QUEUE_AWS_ACCESS_KEY_ID: '${QUEUE_AWS_ACCESS_KEY_ID}'
+      QUEUE_AWS_SECRET_ACCESS_KEY: '${QUEUE_AWS_SECRET_ACCESS_KEY}'
+      QUEUE_AWS_REGION: '${QUEUE_AWS_REGION}'
+      QUEUE_S3_ENDPOINT_URL: '${QUEUE_S3_ENDPOINT_URL}'
+      QUEUE_S3_BUCKET: '${QUEUE_S3_BUCKET}'
+      QUEUE_PORT: '${QUEUE_PORT}'
     depends_on:
       - rabbitmq
       - localstack
+    restart: unless-stopped
