--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.817.0",
+    "@aws-sdk/credential-provider-node": "^3.817.0",
     "@types/aws-sdk": "^0.0.42",
     "amqplib": "^0.8.0",
-    "aws-sdk": "^2.1692.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "multer": "^1.4.2"
