--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 QUEUE_RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
-QUEUE_NAME=ia_processing_queue
-QUEUE_AWS_ACCESS_KEY_ID=test
-QUEUE_AWS_SECRET_ACCESS_KEY=test
-QUEUE_AWS_REGION=us-east-1
-QUEUE_S3_ENDPOINT_URL=http://localstack:4566
-QUEUE_S3_BUCKET=ia-files
+QUEUE_NAME=
 QUEUE_PORT=9005
+QUEUE_AWS_ACCESS_KEY_ID=
+QUEUE_AWS_SECRET_ACCESS_KEY=
+QUEUE_AWS_REGION=us-east-1
+QUEUE_S3_ENDPOINT_URL=
+QUEUE_S3_BUCKET=
+QUEUE_AWS_SESSION_TOKEN=
